# ensias-ai-workshop-18-05-2026

./: .env.example  .gitignore  README.md  eval_results.json  pyproject.toml  workshop.md
data/: knowledge_base.md  orders.json  tickets.json
docs/superpowers/specs/: 2026-05-18-from-workflow-to-agent-design.md
slides/: index.html  script.js  styles.css
src/support_bot/: __init__.py  agent_graph.py  api.py  config.py  evals.py  llm.py  main.py  models.py  prompts.py  tools.py  workflow_demo.py  workflow_graph.py
tests/: conftest.py  test_agent.py  test_api.py  test_tools.py  test_workflow.py
