[project]
name = "support-bot"
version = "0.1.0"
description = "Customer support AI assistant: from workflow to agent"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "ENSIAS AI Workshop" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2.50",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "rich>=13.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/support_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
# Rule families. Curated to be useful for a beginner-friendly workshop repo
# without being noisy. See https://docs.astral.sh/ruff/rules/ for details.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names, ...)
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear (likely bugs)
    "UP",  # pyupgrade (modern Python idioms)
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line length — handled by the formatter
    "B008",   # function call in default arg — common with FastAPI Depends
    "UP007",  # X | Y unions — keep Optional/Union for clarity in tutorials
    "UP045",  # X | None style — same reason
]

[tool.ruff.lint.per-file-ignores]
# Tests can use long names, asserts, etc. without complaint.
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
root = ["./src", "./tests"]
python-version = "3.13"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
# LangGraph's StateGraph generic bound rejects plain TypedDict subclasses even
# though it works at runtime — silence the false positive globally rather than
# sprinkling per-line ignores. See:
# https://github.com/langchain-ai/langgraph/issues/2080
# Beginner-friendly project; treat these as warnings, not errors.
possibly-unresolved-reference = "ignore"
